@@ -302,7 +302,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '10.4.0m1');
-pts_define('PTS_CORE_VERSION', 10310);
+pts_define('PTS_CORE_VERSION', 10311);
 pts_define('PTS_RELEASE_DATE', '20210317');
 pts_define('PTS_CODENAME', 'Ibestad');
 
