@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 pts-core: Ubuntu 21.04 dependency updates
 phodevi: Intel Linux graphics string reporting improvement
+pts-core: Add "auto-resolution-wide" option
 
 Phoronix Test Suite 10.4.0 Milestone 1
 17 March 2021
